--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -110,7 +110,7 @@
                   </div>
                   <div class="col-lg-12 text-left">
                     <div id="stages-table">
-                      <table class="table table-sm table-bordered">
+                      <table class="table table-sm table-bordered-red">
                         <thead>
                           <tr>
                             <th scope="col">Mild</th>
@@ -122,8 +122,6 @@
                         <tbody>
                           <tr>
                             <td id="mild-desc">
-                              <br>
-                              <br>
                               *&nbsp;Microaneurysms ONLY.
                             </td>
                             <td id="mod-desc">
